[package]
name = "sp__s_root_note"
version = "1.0.0"
edition = "2024"

[dependencies]
sp__e_note_letter = { path = "../sp__e_note_letter" }
sp__e_note_modifier = { path = "../sp__e_note_modifier" }
sp__e_root_note = { path = "../sp__e_root_note" }
sp__t_keyboard_friendly_name = { path = "../sp__t_keyboard_friendly_name" }
